# game-programming-cpp

./: .clang-format  .gitignore  .gitmodules  GameProgrammingCPP.sln  README.md
Chapter01/: Chapter01.vcxproj  Chapter01.vcxproj.filters  Game.cpp  Game.h  Main.cpp
Chapter02/: Actor.cpp  Actor.h  Chapter02.vcxproj  Chapter02.vcxproj.filters  Component.h  Game.cpp  Game.h  Math.cpp  Math.h  SpriteComponent.cpp  SpriteComponent.h  sprite_component.cpp
chapter01/: CMakeLists.txt  game.cpp  game.h  main.cpp
chapter02/: CMakeLists.txt  actor.cpp  actor.h  anim_sprite_component.cpp  anim_sprite_component.h  bg_sprite_component.cpp  bg_sprite_component.h  component.cpp  component.h  game.cpp  game.h  main.cpp  math.h  ship.cpp  ship.h  sprite_component.cpp  sprite_component.h
chapter02/include/: actor.h  anim_sprite_component.h  game.h  game_math.h  ship.h
chapter02/src/: actor.cpp  anim_sprite_component.cpp  bg_sprite_component.cpp  game.cpp  game_math.cpp  sprite_component.cpp
chapter03/: CMakeLists.txt
chapter03/include/: actor.h  asteroid.h  bg_sprite_component.h  circle_component.h  component.h  game.h  game_math.h  game_random.h  laser.h  move_component.h  ship.h
chapter03/src/: actor.cpp  asteroid.cpp  circle_component.cpp  component.cpp  game.cpp  game_random.cpp  laser.cpp  move_component.cpp  ship.cpp  sprite_component.cpp
chapter04/: CMakeLists.txt
chapter04/include/: actor.h  ai_component.h  ai_state.h  bullet.h  enemy.h  game.h  game_math.h  grid.h  nav_component.h  ship.h  sprite_component.h  tile.h  tower.h
chapter04/src/: ai_component.cpp  ai_state.cpp  bg_sprite_component.cpp  bullet.cpp  component.cpp  enemy.cpp  game.cpp  game_random.cpp  grid.cpp  input_component.cpp  laser.cpp  move_component.cpp  nav_component.cpp  search.cpp  tile.cpp  tower.cpp
chapter05/: CMakeLists.txt
chapter05/include/: circle_component.h  game.h  input_component.h  shader.h  vertex_array.h
chapter05/shaders/: basic.frag  basic.vert
chapter05/src/: game.cpp  game_math.cpp  main.cpp  shader.cpp  sprite_component.cpp  vertex_array.cpp
